[package]
name = "iceberg"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
# We'll use worker::Fetch, but keeping reqwest-wasm is an option if needed. 
# For now, let's stick to the worker crate primitives as requested.
